--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+
+@layer base {
+    html {
+        font-family: "inter", system-ui, sans-serif;
+    }
+}
